--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
     "tasks": [
         {
             "taskName": "build-debug",
-            "args": ["${workspaceRoot}/node_modules/gulp/bin/gulp.js", "build-debug"],
+            "args": ["${workspaceRoot}/node_modules/gulp/bin/gulp.js", "watch"],
             "isBuildCommand": true,
             "suppressTaskName": true,
             "problemMatcher": [
