Search, insert in BinSearchThree + deep equality method

--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "knuth-shuffle": "latest",
     "tsunit.external": "latest",
     "vinyl-fs": "latest"
-  } 
-  
+  },
+  "dependencies": {}
 }
