--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "knuth-shuffle": "latest",
     "merge2": "latest",
     "tsunit.external": "latest",
-    "typescript": "^2.3.2",
+    "typescript": "latest",
     "vinyl-fs": "latest"
   },
   "dependencies": {}
